--- a/_config.yml
+++ b/_config.yml
@@ -14,12 +14,12 @@ footer_text: >
   13605 Republic of Korea
 
 institution: Clinical Bioinformatics Research Lab
-keywords: Precision Medicine, Medical Ai, Genomic Analysis, Rare Disease Research, Medical Image Analysis # add your own keywords or leave empty
+keywords: 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon:  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://snubhpmc.github.io # the base hostname & protocol for your site
-baseurl: /CBRL # the subpath of your site, e.g. /blog/. Leave blank for root
+baseurl: /CBI # the subpath of your site, e.g. /blog/. Leave blank for root
 last_updated: false # set to true if you want to display last updated in the footer
 impressum_path: # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 back_to_top: true # set to false to disable the back to top button
@@ -96,7 +96,7 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: CBRL Blog
+blog_name: CBI Blog
 blog_description: Clinical Bioinformatics Research Lab Blog
 permalink: /blog/:year/:title/
 lsi: false
